--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,17 @@
+# Telegram Bot Token from @BotFather
+TELEGRAM_BOT_TOKEN=8504848437:AAFH4yzdrnPjjIZ2Bv2rnhMVupU5AmKPRVc
 
+# YouTube Data API v3 Key from Google Cloud Console
+YOUTUBE_API_KEY=AIzaSyDvqh5_nIVP4VuHiobnvjnUbtYr7NcAEz0
+
+# Optional: Database path (defaults to ./database.sqlite)
+DATABASE_PATH=./humotv.db
+
+# Optional: Bot username (for display purposes)
+BOT_USERNAME=HumoTVBot
+
+# Optional: Check interval in milliseconds (default: 300000 = 5 minutes)
+CHECK_INTERVAL=300000
+
+# Optional: Admin Telegram User IDs (comma separated)
+ADMIN_IDS=123456789,987654321
