--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Dependencies
+node_modules/
 
+# Environment variables
+.env
+.env.local
+
+# Database
+database.sqlite
+*.db
+
+# Logs
+*.log
+logs/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# Temporary files
+tmp/
+temp/
