Update .env.example with new configuration options

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,14 @@
 # Telegram Bot Token from @BotFather
 TELEGRAM_BOT_TOKEN=8504848437:AAFH4yzdrnPjjIZ2Bv2rnhMVupU5AmKPRVc
 
-# YouTube Data API v3 Key from Google Cloud Console
+# YouTube Data API v3 Key
 YOUTUBE_API_KEY=AIzaSyDvqh5_nIVP4VuHiobnvjnUbtYr7NcAEz0
 
-# Optional: Database path (defaults to ./database.sqlite)
-DATABASE_PATH=./humotv.db
+# Admin Telegram User IDs (comma separated)
+ADMIN_IDS=6579383715
 
-# Optional: Bot username (for display purposes)
-BOT_USERNAME=HumoTVBot
+# Database path (optional)
+DB_PATH=./humo_tv.db
 
-# Optional: Check interval in milliseconds (default: 300000 = 5 minutes)
+# Check interval in milliseconds (optional)
 CHECK_INTERVAL=300000
-
-# Optional: Admin Telegram User IDs (comma separated)
-ADMIN_IDS=123456789,987654321
