--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+// package.json
 {
   "name": "humo-tv-bot",
   "version": "1.0.0",
@@ -6,19 +7,22 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"No tests specified\" && exit 0"
   },
-  "keywords": ["telegram", "youtube", "bot", "humo"],
+  "keywords": ["telegram", "youtube", "bot", "humo", "uzbekistan"],
   "author": "For Humo Team",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.8",
     "node-telegram-bot-api": "^0.64.0",
+    "axios": "^1.6.0",
     "sqlite3": "^5.1.6",
     "node-cron": "^3.0.3",
     "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 }
