--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-
+# .env
+TELEGRAM_TOKEN=YOUR_ACTUAL_TELEGRAM_BOT_TOKEN_HERE
+YOUTUBE_API_KEY=AIzaSyBeESX2fWlgF84CEu03J38D-0ONVD7gAJU
+ADMINS=123456789
+BOT_USERNAME=HumoTVBot
+CHECK_INTERVAL=300000
+DATABASE_FILE=./humo.db
