--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # .env
-TELEGRAM_TOKEN=YOUR_ACTUAL_TELEGRAM_BOT_TOKEN_HERE
+TELEGRAM_TOKEN=8504848437:AAFH4yzdrnPjjIZ2Bv2rnhMVupU5AmKPRVc
 YOUTUBE_API_KEY=AIzaSyBeESX2fWlgF84CEu03J38D-0ONVD7gAJU
-ADMINS=123456789
-BOT_USERNAME=HumoTVBot
+ADMINS=6579383715
+BOT_USERNAME=@humotv_bot
 CHECK_INTERVAL=300000
 DATABASE_FILE=./humo.db
